# intent-based-swap

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/api/: errors.rs  routes.rs
src/config/: args.rs  mod.rs
src/contracts/: mod.rs  quoter_v2.rs
src/domain/: mod.rs  order.rs  quote.rs
src/handlers/: quote.rs
src/services/: mod.rs  price_provider.rs  quoter.rs
tests/: get_quote.rs  health_check.rs
