[package]
name = "intent-services"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "intent-services"

[dependencies]
alloy = "1.6.3"
alloy-primitives = "1.5.7"
axum = "0.8.8"
serde = "1.0.228"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.149"
